Вывод данных справочников
+ вывод данных о нарушениях, владельцах и ТС у инспектора
+ изменены названия некоторых классов
+ добавлены новые свойства для некоторых классов в Model

--- a/CarAccountingGibdd/CarAccountingGibdd/App.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/App.xaml
@@ -13,7 +13,7 @@
                 <ResourceDictionary Source="Styles/Brushes.xaml"/>
                 
                 <!-- Базовый стиль-->
-                <ResourceDictionary Source="Styles/BaseStyles.xaml"/>
+                <ResourceDictionary Source="Styles/StylesBased.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
 
