--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoInspectionDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoInspectionDialog.xaml
@@ -163,7 +163,7 @@
                             <TextBlock DockPanel.Dock="Top"
                                        Margin="0 0 0 12"
                                        TextWrapping="Wrap">
-                                <Run Text="Пользованный:" Style="{StaticResource Run.Subtitle}"/>
+                                <Run Text="Б/У:" Style="{StaticResource Run.Subtitle}"/>
                                 <Run Text="{Binding Application.Vehicle.UsedValueString, Mode=OneWay}"
                                      Style="{StaticResource Run.Description}"/>
                             </TextBlock>
