--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoCertificateDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoCertificateDialog.xaml
@@ -147,7 +147,7 @@
                                Margin="0 0 0 12"
                                TextWrapping="Wrap">
                     <Run Text="Номер свидетельства:" Style="{StaticResource Run.Subtitle}"/>
-                    <Run Text="{Binding CertificateId, StringFormat={}№{0}}"
+                    <Run Text="{Binding CertificateId}"
                          Style="{StaticResource Run.Description}"/>
                     </TextBlock>
 
