--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/ViolationsInspectionsPageOperator.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/ViolationsInspectionsPageOperator.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="CarAccountingGibdd.Pages.PagesInspector.InspectionPageInspector"
+﻿<Page x:Class="CarAccountingGibdd.Pages.PagesOperator.ViolationsInspectionsPageOperator"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CarAccountingGibdd.Pages.PagesInspector"
+      xmlns:local="clr-namespace:CarAccountingGibdd.Pages.PagesOperator"
       mc:Ignorable="d" 
-     
+      
       d:Width="1000" d:Height="450"
       d:Background="{StaticResource Background.Window.Brush}"
       xmlns:converters="clr-namespace:CarAccountingGibdd.Classes.Converters">
@@ -67,7 +67,7 @@
                     </ItemsControl>
                 </ScrollViewer>
 
-                <TextBlock Text="Данные об инспекциях отсутствуют"
+                <TextBlock Text="Данные о списках с нарушениями отсутствуют"
                            Style="{StaticResource TextBlock.H2}"
                            Visibility="{Binding Items.Count, ElementName=cardsIC, 
                            Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
