--- a/CarAccountingGibdd/CarAccountingGibdd/Styles/StylesBased.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Styles/StylesBased.xaml
@@ -324,9 +324,11 @@
         <Setter Property="FontFamily" Value="SF Pro Text"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="FontWeight" Value="SemiBold"/>
-        <Setter Property="Padding" Value="18 0"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="18 14.5"/>
+        <Setter Property="TextAlignment" Value="Justify"/>
+        <Setter Property="VerticalContentAlignment" Value="Top"/>
         <Setter Property="Cursor" Value="IBeam"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
@@ -344,7 +346,7 @@
                                           Focusable="False"/>
 
                             <TextBlock x:Name="placeholder"
-                                       Padding="20 0"
+                                       Padding="20 14.5"
                                        IsHitTestVisible="False"
                                        Text="{Binding Tag, RelativeSource={RelativeSource TemplatedParent}}"
                                        FontFamily="SF Pro Text"
@@ -353,7 +355,7 @@
                                        Foreground="{StaticResource Text.Static.Brush}"
                                        FontWeight="SemiBold"
                                        HorizontalAlignment="Left"
-                                       VerticalAlignment="Center"/>
+                                       VerticalAlignment="Top"/>
                         </Grid>
                     </Border>
 
